force-app/main/default/objects/Case_Communication__c/Case_Communication__c.object-meta.xml
<CustomObject>
    <label>Case Communication</label>
    <nameField>
        <displayFormat>CaseComm-{0000}</displayFormat>
        <label>Case Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>