force-app/main/default/objects/Case_Communication__c/fields/Activity_Author__c.field-meta.xml
<CustomField>
    <fullName>Activity_Author__c</fullName>
    <label>Activity Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>