force-app/main/default/objects/Case_Communication__c/fields/Activity_Content__c.field-meta.xml
<CustomField>
    <fullName>Activity_Content__c</fullName>
    <label>Activity Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>