force-app/main/default/objects/Case_Communication__c/fields/Activity_Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Activity_Created_DateTime__c</fullName>
    <label>Activity Created DateTime</label>
    <type>DateTime</type>
</CustomField>