force-app/main/default/objects/Case_Communication__c/fields/Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID__c</fullName>
    <externalId>true</externalId>
    <label>Activity ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>