force-app/main/default/objects/Case_Communication__c/fields/Activity_Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Activity_Source_URL__c</fullName>
    <label>Activity Source URL</label>
    <type>Url</type>
</CustomField>