force-app/main/default/objects/Case_Communication__c/fields/Activity_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_User_ID__c</fullName>
    <label>Activity User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>