force-app/main/default/objects/Case_Communication__c/fields/Case_Communication__c.field-meta.xml
<CustomField>
    <fullName>Case_Communication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Communication</label>
    <referenceTo>Case_Communication__c</referenceTo>
    <relationshipLabel>Case Communications</relationshipLabel>
    <relationshipName>Case_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>