force-app/main/default/objects/Case_Communication__c/fields/Replied_Activities__c.field-meta.xml
<CustomField>
    <fullName>Replied_Activities__c</fullName>
    <label>Replied Activities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>