force-app/main/default/objects/Case_Communication__c/fields/Sent_from_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Sent_from_SFDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent from SFDC</label>
    <type>Checkbox</type>
</CustomField>